<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">House of Tasty</string>
    <string name="contentDescription_logo_big">logo dell\'applicazione, dimensione grande</string>
    <string name="contentDescription_logo_medium">logo dell\'applicazione, dimensione media</string>
    <string name="contentDescription_logo_header">logo dell\'applicazione, nell\'header del menù laterale</string>
    <string name="contentDescription_recipe_preview">preview dell\'immagine della ricetta</string>
    <string name="contentDescription_recipe_form_button">pulsante di submit della form della ricetta</string>
    <string name="button_login">Accedi</string>
    <string name="button_register">Registrati</string>
    <string name="placeholder">generic_placeholder</string>
    <string name="timestamp">timestamp</string>
    <string name="number">7283</string>
    <string name="number_long">17520893</string>
    <string name="timestampTemplate_creation">Creata in data %1$s alle %2$s</string>
    <string name="timestampTemplate_publication">Pubblicata in data %1$s alle %2$s</string>
    <string name="timestampTemplate_publicationPrivate">Pubblicata il %1$s alle %2$s (privata)</string>
    <string name="authorAndTimestampTemplate">%1$s - %2$s alle %3$s</string>
    <string name="startActivityPreviewTemplate">Preview: %1$s</string>
    <string name="loadingError">[ERROR_001: Errore di caricamento]</string>
    <string name="dataLoadingError">[ERROR_002: Impossibile recuperare i dati]</string>
    <string name="imageLoadingError">[ERROR_003: Impossibile caricare l\'immagine]</string>
    <string name="unknownDataError">[ERROR_004: Informazione sconosciuta]</string>
    <string name="connectionError">[ERROR_005: Connessione assente]</string>
    <string name="button_next"><![CDATA[Prosegui >>]]></string>
    <string name="welcome">Benvenuto!</string>
    <string name="welcome_paragraph">Crea le tue ricette personalizzate, inserisci i tuoi prodotti, esplora le ricette di altri utenti con "House of Tasty"!</string>
    <string name="access_text">Accedi o crea un account</string>
    <string name="access_bottomText">Continua in modalità offline</string>
    <string name="contentDescription_access_background">immagine di sfondo</string>
    <string name="login_editTextPlaceholder_email"><i>Email</i></string>
    <string name="login_editTextPlaceholder_password"><i>Password</i></string>
    <string name="login_bottomText">Non hai un account? Registrati</string>
    <string name="register_editTextPlaceholder_username"><i>Username</i></string>
    <string name="register_editTextPlaceholder_email"><i>Email</i></string>
    <string name="register_editTextPlaceholder_name"><i>Nome</i></string>
    <string name="register_editTextPlaceholder_surname"><i>Cognome</i></string>
    <string name="register_editTextPlaceholder_password"><i>Password</i></string>
    <string name="register_editTextPlaceholder_confirmPassword"><i>Conferma password</i></string>
    <string name="register_bottomText">Hai già un account? Accedi</string>
    <string name="username">Username</string>
    <string name="name">Nome</string>
    <string name="surname">Cognome</string>
    <string name="mail">Email</string>
    <string name="dettagli">Dettagli profilo</string>
    <string name="statistiche">Statistiche</string>
    <string name="visualProfile">Visualizzazioni profilo</string>
    <string name="publishedRecipes">Ricette pubblicate</string>
    <string name="totalRecipesView">Totale visualizzazioni ricette</string>
    <string name="totalLike">Totale "mi piace" ricette</string>
    <string name="totalComment">Totale commenti ricette</string>
    <string name="totalDownload">Totale download ricette</string>
    <string name="fab_edit_profile">Modifica i dati del profilo</string>
    <string name="fab_publish_recipe">Pubblica una ricetta</string>
    <string name="password">Password</string>
    <string name="txtAddProduct">Aggiungi prodotto</string>
    <string name="fab_add_product">Aggiungi un nuovo prodotto</string>
    <string name="txtEditProfile">Modifica Profilo</string>
    <string name="txtEditImage">Modifica immagine</string>
    <string name="txtRemoveImage">Rimuovi immagine</string>
    <string name="txtNewPassword">Nuova password</string>
    <string name="txtChkPassword">Conferma nuova password</string>
    <string name="txtEmptyNotEdit">Lascia vuoto per non modificare</string>
    <string name="txtConfermaPassword">Conferma password</string>
    <string name="txtSaveEdit">Salva modifiche</string>
    <string name="hintUsername">Inserire il nuovo username</string>
    <string name="hintEmail">Inserire la nuova email</string>
    <string name="hintNome">Inserire il nuovo nome</string>
    <string name="hintCognome">Inserire il nuovo cognome</string>
    <string name="scrollviewDescription">Interfaccia scorrevole con i dettagli della ricetta</string>
    <string name="recipeImageDescription">Immagine di copertina della ricetta</string>
    <string name="recipeEditLogoDescription">Icona per la modifica della ricetta</string>
    <string name="numPersoneImageDescription">Immagine di copertina della ricetta</string>
    <string name="timeImageDescription">Immagine di copertina della ricetta</string>
    <string name="recipeTitle">Titolo della ricetta</string>
    <string name="recipeInfo">Creatore e/o data di creazione o di pubblicazione</string>
    <string name="recipeStatus">Stato ricetta (pubblicata, non pubblicata, privata)</string>
    <string name="recipeStatusPublished">Ricetta pubblicata</string>
    <string name="recipeStatusUnPublished">Ricetta non pubblicata</string>
    <string name="recipeStatusPublishedPrivate">Ricetta pubblicata (post privato)</string>
    <string name="recipeStats">Numero visualizzazioni: </string>
    <string name="recipeLikes">Mi Piace</string>
    <string name="recipeDownloads">Salva</string>
    <string name="recipeIngredientsTitle">INGREDIENTI</string>
    <string name="recipeIngredients">Lista degli ingredienti</string>
    <string name="recipePreparationTitle">PREPARAZIONE</string>
    <string name="recipePreparation">Procedura per preparare la ricetta</string>
    <string name="recipeComments">COMMENTI</string>
    <string name="recipeCommentEditTextPlaceholder">Scrivi un commento</string>
    <string name="recipeNumPeoplePlaceholder">4</string>
    <string name="recipePreparationTimePlaceholder">1h 20min</string>
    <string name="fab_add_recipe">Aggiungi una nuova ricetta</string>
    <string name="fab_edit_recipe">Modifica i dati della ricetta</string>
    <string name="errorMessagePlaceholder">error_message </string>
    <string name="labelImage">Immagine di copertina:</string>
    <string name="labelTitle">Titolo della ricetta:</string>
    <string name="hintTitle">Inserire il titolo della ricetta</string>
    <string name="labelIngredients">Lista degli ingredienti:</string>
    <string name="hintIngredients">Elencare ingredienti separati da virgola</string>
    <string name="labelPreparation">Preparazione:</string>
    <string name="hintPreparation">Spiegare la procedura di preparazione</string>
    <string name="labelNumPeople">Porzione:</string>
    <string name="hintNumPeople">es. 2</string>
    <string name="unitNumPeople">persone</string>
    <string name="labelPreparationTime">Tempo di preparazione:</string>
    <string name="hintPreparationTime">es. 45</string>
    <string name="unitPreparationTime">minuti</string>
    <string name="labelIsPublished">Ricetta pubblicata:</string>
    <string name="labelIsPostPrivate">Post ricetta privato:</string>
    <string name="txtDeleteRecipe">Elimina ricetta</string>
    <string name="txtCreateRecipe">Crea ricetta</string>
    <string name="collectionName">Nome della raccolta:</string>
    <string name="hintCollectionName">Inserire il nome della raccolta</string>
    <string name="labelListaRicette">Ricette:</string>
    <string name="collectionImageDescription">Immagine di copertina della raccolta</string>
    <string name="fab_add_collection">Aggiungi una nuova raccolta</string>
    <string name="fab_edit_collection">Modifica la raccolta</string>
    <string name="txtDeleteCollection">Elimina raccolta</string>
    <string name="txtCreateCollection">Crea raccolta</string>
    <string name="txtAddRecipe">Aggiungi ricetta</string>
    <string name="sectionTitleApplication">Applicazione</string>
    <string name="sectionTitleAccount">Account</string>
    <string name="sectionTitleDocuments">Documenti</string>
    <string name="sectionTitleGeneric">Generiche</string>
    <string name="itemTitleAbout">ABOUT</string>
    <string name="itemTitleReleaseNotes">NOTE DI RILASCIO</string>
    <string name="itemTitleTermsOfService">TERMINI DI UTILIZZO</string>
    <string name="itemTitleAccountInfo">INFO ACCOUNT</string>
    <string name="itemTitleProfile">PROFILO</string>
    <string name="itemTitleLogout">LOGOUT</string>
    <string name="itemTitleAccountReset">RESET ACCOUNT</string>
    <string name="itemTitleAccountDeletion">ELIMINA ACCOUNT</string>
    <string name="itemTitleStartSettings">IMPOSTAZIONI DI AVVIO</string>
    <string name="itemTitlePrivacyPolicy">INFORMATIVA SULLA PRIVACY</string>
    <string name="itemTitleNotificationsManagement">GESTIONE DELLE NOTIFICHE</string>
    <string name="itemSubtitleAbout">Visualizza le informazioni sull\'applicazione</string>
    <string name="itemSubtitleReleaseNotes">Visualizza le note di rilascio</string>
    <string name="itemSubtitleTermsOfService">Visualizza i termini di utilizzo</string>
    <string name="itemSubtitleAccountInfo">Visualizza informazioni sull\'account</string>
    <string name="itemSubtitleProfile">Visualizza il profilo</string>
    <string name="itemSubtitleLogout">Esci dall\'account</string>
    <string name="itemSubtitleAccountReset">Elimina tutti i dati dell\'account</string>
    <string name="itemSubtitleAccountDeletion">Elimina l\'account</string>
    <string name="itemSubtitleStartSettings">Modifica la impostazioni di avvio</string>
    <string name="itemSubtitlePrivacyPolicy">Visualizza l\'informativa sulla privacy</string>
    <string name="itemSubtitleNotificationsManagement">Attiva o disattiva le notifiche</string>
    <string name="accountInfoText">Informazioni sull\'account attualmente in uso:</string>
    <string name="accountInfoIdentifier"><b>- Identificatore account</b></string>
    <string name="accountInfoIdentifierType"><b>- Tipo di identificatore</b></string>
    <string name="accountInfoAuthenticationMode"><b>- Modalità di autenticazione</b></string>
    <string name="accountInfoRestrictions"><b>- Restrizioni account</b></string>
    <string name="accountInfoRestrictionList">
        Sono presenti restrizioni alle seguenti funzionalità:\n
        - Visualizzazione profilo\n
        - Modifica profilo\n
        - Pubblicazione ricette\n
        - Pubblicazione commenti
    </string>
    <string name="accountInfoIdentifierTitle">Cos\'è l\'identificatore account?</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profilo</string>
    <string name="menu_ricettario">Ricettario</string>
    <string name="logout">Logout</string>
    <string name="products">Prodotti</string>
    <string name="collections">Raccolte</string>
    <string name="scadenza">Scadenza:  </string>
    <string name="nome_prodotto">Nome prodotto:</string>
    <string name="amountUnit">Quantita e unità di misura:</string>
    <string name="dataPlaceholder">--/--/----</string>
    <string name="setExpire">Seleziona data di scadenza</string>
    <string name="noExpire">Senza scadenza</string>
    <string name="addProduct">Aggiungi prodotto</string>
    <string name="productNameHint">Inserire nome prodotto/ingrediente</string>
    <string name="quantitaHint">Inserire quantità</string>
</resources>