<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/icon_home"
        android:title="@string/menu_home"/>
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/icon_profile"
        android:title="@string/menu_profile"/>
    <item
        android:id="@+id/nav_product"
        android:icon="@drawable/icon_egg"
        android:title="@string/products"
        />
    <item
        android:id="@+id/nav_cookbook"
        android:icon="@drawable/icon_cookbook"
        android:title="@string/menu_ricettario"/>
    <item
        android:id="@+id/nav_collections"
        android:icon="@drawable/icon_folder"
        android:title="@string/collections"
        />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/icon_logout"
        android:title="@string/logout"/>

</menu>