<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AccessActivity">

    <ImageView
        android:id="@+id/imageView_cucina_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.3"
        android:contentDescription="@string/contentDescription_access_background"
        android:rotation="-90"
        android:scaleX="2.5"
        android:scaleY="2.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/kitchen_background_01" />

    <ImageView
        android:id="@+id/imageView_appLogo_main2"
        android:layout_width="0dp"
        android:layout_height="403dp"
        android:contentDescription="@string/contentDescription_logo_big"
        android:scaleX="1.2"
        android:scaleY="1.2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_big" />

    <View
        android:id="@+id/view_accesso_background"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:background="@drawable/top_rounded_shape_transparent"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_cucina_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/tawny_brown"
        android:fontFamily="@font/baloo_bhai"
        android:text="@string/button_register"
        android:textSize="20sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_login"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:textAllCaps="true" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/tawny_brown"
        android:fontFamily="@font/baloo_bhai"
        android:text="@string/button_login"
        android:textSize="20sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toStartOf="@+id/button_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:textAllCaps="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/baloo_bhai"
        android:text="@string/access_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_accesso_background" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gray_brown_transparent40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/text_bottom_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/baloo_bhai"
            android:text="@string/access_bottomText"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:textStyle="normal" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>