<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <View
        android:id="@+id/view_register_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/password_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_register_field_shape"
        android:ems="10"
        android:fontFamily="@font/baloo_bhai_2"
        android:hint="@string/register_editTextPlaceholder_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/confirmPassword_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cognome_register"
        app:layout_constraintVertical_bias="0.727" />

    <EditText
        android:id="@+id/username_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_register_field_shape"
        android:ems="10"
        android:fontFamily="@font/baloo_bhai_2"
        android:hint="@string/register_editTextPlaceholder_username"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/email_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_appLogo_register"
        app:layout_constraintVertical_bias="0.292"
        app:layout_constraintVertical_chainStyle="spread" />

    <EditText
        android:id="@+id/email_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_register_field_shape"
        android:ems="10"
        android:fontFamily="@font/baloo_bhai_2"
        android:hint="@string/register_editTextPlaceholder_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/nome_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_register"
        app:layout_constraintVertical_bias="0.377" />

    <EditText
        android:id="@+id/nome_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_register_field_shape"
        android:ems="10"
        android:fontFamily="@font/baloo_bhai_2"
        android:hint="@string/register_editTextPlaceholder_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/cognome_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_register"
        app:layout_constraintVertical_bias="0.549" />

    <EditText
        android:id="@+id/cognome_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_register_field_shape"
        android:ems="10"
        android:fontFamily="@font/baloo_bhai_2"
        android:hint="@string/register_editTextPlaceholder_surname"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/password_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_register"
        app:layout_constraintVertical_bias="0.622" />

    <EditText
        android:id="@+id/confirmPassword_register"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@drawable/login_register_field_shape"
        android:ems="10"
        android:fontFamily="@font/baloo_bhai_2"
        android:hint="@string/register_editTextPlaceholder_confirmPassword"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/button_registrati"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_register"
        app:layout_constraintVertical_bias="0.804" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/tawny_brown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/text_bottom_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/baloo_bhai"
            android:text="@string/register_bottomText"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </FrameLayout>

    <Button
        android:id="@+id/button_registrati"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/tawny_brown"
        android:fontFamily="@font/baloo_bhai"
        android:text="@string/button_register"
        android:textSize="20sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:textAllCaps="true" />

    <ImageView
        android:id="@+id/imageView_appLogo_register"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:contentDescription="@string/contentDescription_logo_medium"
        android:scaleX="1.2"
        android:scaleY="1.2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/medium_logo" />
</androidx.constraintlayout.widget.ConstraintLayout>